# PokeAgent

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  INSTALL.md  README.md  demo.py  main.py  manual_download.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  simple_gen1ou_client.py
agents/: __init__.py  base_agent.py  llm_agent.py  rl_agent.py  showdown_agent.py  showdown_llm_agent.py  showdown_rl_agent.py
config/: example_config.json  showdown_config.json
docs/: SHOWDOWN_GUIDE.md
env/: battle_manager.py  poke_env_wrapper.py  showdown_manager.py
pokeagent/: __init__.py  cli.py  model_downloader.py
pokeagent/agents/: __init__.py  base_agent.py  highest_damage_agent.py  llm_agent.py  metamon_pretrain_agent.py  random_agent.py  showdown_agent.py
pokeagent/client/: __init__.py  showdown_client.py
pokeagent/config/: showdown_config.json
scripts/: evaluate.py  run_llm.py  run_showdown.py  showdown_demo.py  train_rl.py
teams/: .gitkeep
tests/: test_agents.py  test_showdown_agent.py
