[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokeagent"
version = "0.1.0"
description = "A Pokemon Showdown client with LLM-based battle AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PokeAgent Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "poke-env==0.8.3",
    "torch==2.6.0",
    "transformers==2.1.1",
    "numpy",
    "python-dotenv",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/yourusername/pokeagent"
Repository = "https://github.com/yourusername/pokeagent"
Issues = "https://github.com/yourusername/pokeagent/issues"

[project.scripts]
pokeagent = "pokeagent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pokeagent*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

